# wasm-game-of-life

./: .travis.yml  Cargo.toml  LICENSE.md  LICENSE_MIT  README.md  design.md  index.html
.github/workflows/: build.yml
src/: lib.rs
