[package]
name = "wasm-game-of-life"
version = "0.1.0"
authors = ["Wojciech Bartnik <yisonPylkita@gmail.com>"]
edition = "2018"
description = "Game of Life in Rust WASM"
repository = "https://github.com/yisonPylkita/wasm-game-of-life"
license = "MIT"

[lib]
crate-type = ["cdylib"]

# [features]
# default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"
